1999-05-07  root  <guiheneu@jean.joudboeuf.fr>

	* camel/camel-data-wrapper.[ch]:new class.
	This should not be a class but rather an 
	interface. The day Gtk support interfaces, 
	it dataWrapper should become an interface.

1999-05-04  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-service.c (camel_service_get_url): 
	new method.

	* devel-docs/camel/camel-sections.txt: added 
	function doc references

	* camel/camel-folder.c (__camel_folder_close): 
	fixed indentation.
	(camel_folder_expunge): new method.
	(__camel_folder_close): used expunge flag

1999-05-03  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-folder.c (camel_folder_get_mode): 
	typo fix

	* camel/camel-folder.c (__camel_folder_list_subfolders): 
	new func.

	* some doc stuffs
	

1999-05-01  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-folder.c 
	(__camel_folder_get_mode): 
	(camel_folder_get_mode): 
	(camel_folder_get_parent_store): 
	(__camel_folder_get_parent_store): 
	(camel_folder_get_parent_folder): 
	(__camel_folder_get_parent_folder): 
	new methods

	* camel/camel-service.c: put __ prefix before
	private virtual funcs.

	* camel/camel-folder.c (camel_folder_delete): 
	(camel_folder_delete_messages): 
	new methods.

	* camel/url-util.c (g_url_new): some
	more comments 

1999-04-27  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-folder.c (camel_folder_create): 
	new public function.

1999-04-25  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-session.c (camel_session_get_store_from_provider): 
	initialize folder object.

	* camel/camel-store.c (init): new method.
	called by session object at instantiation time.

	* camel/camel-store.h (struct _CamelStore): 
	new fields : session and url_name

1999-04-25  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-session.c (camel_session_set_provider): 
	new method to set the default provider for a protocol.
	(camel_session_get_store_from_provider): 
	new method to instantiate a folder from a provider.
